# cpp-test-anywhere

./: .gitignore  CMakeLists.txt  CMakePresets.json  format_lib.py
inc/: CMakeLists.txt
inc/cta/: cta.hpp  cta_main.hpp
tests/: CMakeLists.txt  tests.cpp
